part5/5.02.ServiceMesh/fe-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-fe-svc
  namespace: todos-ns
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: todos-fe
  type: ClusterIP
