part5/5.02.ServiceMesh/q-pub-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-q-publisher-svc
  namespace: todos-ns
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    app: todos-q-publisher
  type: ClusterIP
