part5/5.02.ServiceMesh/rproxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-rproxy-svc
  namespace: todos-ns
spec:
  ports:
  - port: 2348
    protocol: TCP
    targetPort: 80
  selector:
    app: todos-rproxy
  type: ClusterIP
